--- a/pom.xml
+++ b/pom.xml
@@ -24,17 +24,9 @@
 		<java.version>1.8</java.version>
 	</properties>
 
-	<dependencies>
+	
 		
-	<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		
-
-		
-	</dependencies>
+	
 
 	<build>
 		<plugins>
@@ -42,9 +34,19 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goals>install</goals>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
+	<scm>
+		<developerConnection>scm:git:https://github.com/sumitml/sumit-pet-clinic.git</developerConnection>
+	</scm>
 
 	<modules>
 		<module>sumit-pet-clinic-data</module>
