--- a/sumit-pet-clinic-web/pom.xml
+++ b/sumit-pet-clinic-web/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.sk</groupId>
     <artifactId>sumit-pet-clinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
   </parent>
   <artifactId>sumit-pet-clinic-web</artifactId>
   <name>sumit-pet-clinic-web</name>
@@ -13,7 +13,7 @@
   <dependency>
   	<artifactId>sumit-pet-clinic-data</artifactId>
 	<groupId>com.sk</groupId>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
   </dependency>
   	<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -40,5 +40,5 @@
 		</dependency>
   </dependencies>
   <groupId>com.sk</groupId>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
 </project>
