--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.sk</groupId>
 	<artifactId>sumit-pet-clinic</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<packaging>pom</packaging>
 
 	<name>sumit-pet-clinic</name>
@@ -46,7 +46,7 @@
 
 	<scm>
 		<developerConnection>scm:git:https://github.com/sumitml/sumit-pet-clinic.git</developerConnection>
-	  <tag>HEAD</tag>
+	  <tag>sumit-pet-clinic-0.0.2</tag>
   </scm>
 
 	<modules>
