update release plugin

--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Mon Sep 24 18:50:18 IST 2018
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-scm.url=scm\:git\:https\://github.com/sumitml/sumit-pet-clinic.git
-preparationGoals=clean verify
-projectVersionPolicyId=default
-remoteTagging=true
+#Mon Sep 24 18:55:32 IST 2018
+project.scm.com.sk\:sumit-pet-clinic-web.empty=true
+project.dev.com.sk\:sumit-pet-clinic-data=0.0.3-SNAPSHOT
 scm.commentPrefix=[maven-release-plugin] 
+project.dev.com.sk\:sumit-pet-clinic=0.0.3-SNAPSHOT
+pushChanges=true
+project.rel.com.sk\:sumit-pet-clinic-web=0.0.2
+scm.tag=sumit-pet-clinic-0.0.2
+remoteTagging=true
+projectVersionPolicyId=default
+scm.url=scm\:git\:https\://github.com/sumitml/sumit-pet-clinic.git
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+preparationGoals=clean verify
+project.scm.com.sk\:sumit-pet-clinic.developerConnection=scm\:git\:https\://github.com/sumitml/sumit-pet-clinic.git
+project.dev.com.sk\:sumit-pet-clinic-web=0.0.3-SNAPSHOT
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+project.rel.com.sk\:sumit-pet-clinic=0.0.2
+project.scm.com.sk\:sumit-pet-clinic.tag=HEAD
+project.scm.com.sk\:sumit-pet-clinic-data.empty=true
+completedPhase=end-release
+project.rel.com.sk\:sumit-pet-clinic-data=0.0.2
