adding controller and index

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+	<!-- 	<start-class>com.sk.sumitpetclinic.SumitPetClinicApplication</start-class>    -->
 	</properties>
 
 	
@@ -32,6 +33,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+				<skip>true</skip>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -39,6 +43,7 @@
 				<configuration>
 					<goals>install</goals>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
+					
 				</configuration>
 			</plugin>
 		</plugins>
